syntax = "proto3";
option go_package = "/domains/";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

package domains;

message RegisterReq {
  string uuid = 1;
  string http = 2;
}

message RegisterRes {
  bool ok = 1;
}

message HCReq {
  string uuid = 1;
}


message HCRes {
    string uuid = 1;
    google.protobuf.Timestamp time = 2;
} 

enum DataType {
    string = 0;
    int = 1;
    double = 2;
    long = 3;
}

message IPartition {
    string uuid = 1;
    string key = 2;
    repeated Task Tasks = 3;
    repeated Row Rows = 4;
}

message Row {
    bytes compressRow = 2;
}

message Task {
    string uuid = 1;
    string plugin = 2;
    repeated string instruction = 3;
    repeated google.protobuf.Any instructionParams = 4;
    google.protobuf.Timestamp creationTime = 5;
}

  
message IPartitionResult {
    string uuid = 1;
    repeated TaskResult taskResults = 2;
    google.protobuf.Timestamp endTime = 3;
}

  
message TaskResult {
    string uuid = 1;
    bool status = 2;
    repeated Row Rows = 3;
    google.protobuf.Timestamp endTime = 4;
}